fix: align header and content padding

--- a/packages/client/public/devtools.css
+++ b/packages/client/public/devtools.css
@@ -147,7 +147,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: start;
-	margin: var(--spacing-8);
+	padding: var(--spacing-16);
 }
 
 .title {
